# photon

./: Dockerfile.photon-master  Dockerfile.photon-master-simple  Dockerfile.sunshine  Dockerfile.sunshine-arm64  Dockerfile.sunshine-arm64-debug  Dockerfile.sunshine-arm64-final  Dockerfile.sunshine-arm64-minimal  Dockerfile.sunshine-dummy  Dockerfile.sunshine-simple  Dockerfile.sunshine-xvfb  HOW_IT_WORKS.md  ISOLATED_NETWORK.md  PHOTON_README.md  README.md  SIMPLE_APPROACH.md  USAGE.md  config.template.yml  deploy.sh  docker-compose-debug.yml  docker-compose-isolated.yml  docker-compose-minimal.yml  docker-compose-official.yml  docker-compose-simple.yml  docker-compose.yml  setup-arm.sh  setup-isolated.sh  setup-native-macos.sh  setup-remote-pc.sh  start-photon.sh  switch-pc.sh  test-photon.sh
docker/: start-sunshine.sh
patches/: sunshine-security.patch
photon-master/: CMakeLists.txt
photon-master/src/: MainWindow.cpp  MainWindow.h  MoonlightManager.cpp  MoonlightManager.h  RemotePC.cpp  RemotePC.h  main.cpp
scripts/: secure-pairing.sh
sunshine-config/pc3/: sunshine.conf
